--- a/env_tropycal.yml
+++ b/env_tropycal.yml
@@ -5,7 +5,7 @@ dependencies:
   - matplotlib >= 2.2.2
   - numpy >= 1.14.3
   - scipy >= 1.1.0
-  - pandas >= 0.23.0
+  - pandas <= 1.5.2
   - xarray >= 0.10.7
   - networkx >= 2.0.0
   - pyshp >= 2.1
